<resources>
    <string name="app_name">MediCheck</string>

    <string name="timing_morning">Morning</string>
    <string name="timing_noon">Noon</string>
    <string name="timing_night">Night</string>
    <string name="timing_before_sleep">Before Sleep</string>

    <string name="timing_before_breakfast">Before Breakfast</string>
    <string name="timing_before_lunch">Before Lunch</string>
    <string name="timing_before_dinner">Before Dinner</string>

    <string name="timing_after_breakfast">After Breakfast</string>
    <string name="timing_after_lunch">After Lunch</string>
    <string name="timing_after_dinner">After Dinner</string>

    <string name="timing_between_meals_morning">Between meals(Breakfast - Lunch)</string>
    <string name="timing_between_meals_afternoon">Between meals(Lunch - Dinner)</string>

    <string name="person_self">Myself</string>

    <string name="notification_medicine_title">Time of the medicine</string>

    <string name="label_minutes">minutes</string>
    <string name="label_hours">hours</string>
    <string name="label_name">Name</string>
    <string name="label_start_day">Start day</string>
    <string name="label_timetables">Timetables</string>
    <string name="label_take_number">Once of amount</string>
    <string name="label_photo">Photo</string>
    <string name="label_alarm">Alarm</string>
    <string name="label_interval">Interval</string>
    <string name="label_date_number">Days</string>
    <string name="label_add">Register newly</string>
    <string name="label_add_short">Register newly</string>

    <string name="button_today_medicine">Today\'s Medicine</string>
    <string name="button_today_medicine_description">When you took medicine, click.</string>
    <string name="button_register_medicine">Register Medicine</string>
    <string name="button_register_medicine_description">When you got a medicine, click.</string>
    <string name="button_list_medicine">Medicine List</string>
    <string name="button_list_medicine_description">When you\'d like to remove a medicine, click.</string>
    <string name="button_history_medicine">Medicine Log</string>
    <string name="button_history_medicine_description">When you\'d like to see the history, click.</string>
    <string name="button_setting">Setting</string>
    <string name="button_setting_description">You\'d like to change the person,\n the timetable or the alarm setting, click.</string>
    <string name="button_one_shot">one shot medicine</string>

    <string name="button_register_new_medicine">register NEW medicine</string>
    <string name="button_register_new_medicine_description">You\'d like to register a new medicine, click.</string>
    <string name="button_register_copy_medicine">register COPY medicine</string>
    <string name="button_register_copy_medicine_description">You\'d like to register the medicine you received earlier, click.</string>

    <string name="button_setting_menu_person">Person Setting</string>
    <string name="button_setting_menu_person_description">When you\'d like to add or edit or delete person, click.</string>
    <string name="button_setting_menu_take_time">Take timing Setting</string>
    <string name="button_setting_menu_take_time_description">When you\'d like to change the timing when you take medicine, click.</string>
    <string name="button_setting_menu_alarm">Alarm Setting</string>
    <string name="button_setting_menu_alarm_description">When you\'d like to start or stop alarm, click.</string>

    <string name="button_back">BACK</string>
    <string name="button_previous_day">prev day</string>
    <string name="button_next_day">next day</string>
    <string name="button_calendar">calendar1</string>
    <string name="button_previous_month">prev month</string>
    <string name="button_next_month">next month</string>
    <string name="button_register">Register</string>

    <string name="label_person_name">Person</string>

    <string name="calendar_sun">sun</string>
    <string name="calendar_mon">mon</string>
    <string name="calendar_tue">tue</string>
    <string name="calendar_wed">wed</string>
    <string name="calendar_thu">thu</string>
    <string name="calendar_fri">fri</string>
    <string name="calendar_sat">sta</string>

    <string name="medicine_unit_1">shot</string>

    <string name="setting_item_title_use_reminder">Use reminder</string>
    <string name="setting_item_title_reminder_interval">Reminder interval</string>
    <string name="setting_item_title_reminder_timeout">Reminder timeout</string>

    <string name="dialog_delete_message">Are you sure you want to delete?\n%1$s</string>
    <string name="message_can_not_delete_last_one">The last one can not be deleted.</string>
    <string name="message_can_not_delete_exist_relation_other">This item is in use and can not be deleted.</string>
</resources>
